solved syntactical bug for 6th car was not showing

--- a/src/styles/PickCar.css
+++ b/src/styles/PickCar.css
@@ -1,5 +1,6 @@
 .pick-section {
     padding: 5rem 0;
+    padding-top: 0;
     font-family: Poppins;
 }
 
@@ -36,7 +37,7 @@
 
 .pick-container__car-content {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     gap: 1rem;
 }
 
@@ -71,7 +72,7 @@
 }
 
 .pick-car {
-    width: 50rem;
+    width: 30rem;
     position: relative;
 }
 
@@ -83,5 +84,28 @@
 
 .pick-car img {
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 2rem;
+}
+
+
+
+.pick-description {
+    width: 15rem;
+}
+
+.pick-description__price {
+    width: 100%;
+    background-color: #4169e1;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    color: white;
+    padding: 0.3rem 1.9rem;
+    white-space: nowrap;
+}
+
+.pick-description__price span {
+    font-size: 1.7rem;
+    font-weight: 700;
 }
